// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StringControl renders StringControl unchanged 1`] = `
<div>
  <div
    class="sc-2f9d5146-0 cNukQi"
  >
    <div
      class="sc-3d47d0c3-0 cntFmj"
      disabled=""
    >
      <input
        disabled=""
        placeholder=" "
        type="text"
        value="derp"
      />
      <label
        class="sc-aacc9954-0 dyxLqB"
      >
        String test
      </label>
      <div
        class="sc-56d3ceba-0 hyJFsA"
      >
        <div
          class="sc-3ba9b100-0 fGdMTk"
          color="night"
        />
      </div>
    </div>
    <div
      class="sc-a6becebf-0 iqYcJk"
    />
  </div>
</div>
`;

exports[`StringControl renders StringControl:Phone unchanged 1`] = `
<div>
  <div
    class="sc-2f9d5146-0 iwJwWz"
  >
    <div
      class="sc-3d47d0c3-0 cntFmj"
      disabled=""
    >
      <input
        disabled=""
        placeholder=" "
        type="text"
        value=""
      />
      <label
        class="sc-aacc9954-0 dyxLqB"
      >
        String test
      </label>
      <div
        class="sc-56d3ceba-0 hyJFsA"
      >
        <div
          class="sc-3ba9b100-0 fGdMTk"
          color="night"
        />
      </div>
    </div>
    <div
      class="sc-a6becebf-0 iqYcJk"
    />
  </div>
</div>
`;
